# omari

./: ReadMe.md  omari.service  pyproject.toml  run.md
.github/prompts/: plan-codeReviewFixes.prompt.md  plan-fastapiDropboxOauth2RedirectFlow.prompt.prompt.md  plan-missingFeatures.prompt.md  plan-omariBot.prompt.md
DEV/: code-review.md  docs.md  master.md  phases.md  user-story.md
omar_bot/: .env.example  .gitignore  api.py  auth_store.py  bot.py  config.py  database.py  dropbox_sync.py  main.py  queue_processor.py  requirements.txt  rss_worker.py  torrent.py
omar_bot/WHL/: libtorrent-2.0.11-cp311-cp311-win_amd64.whl  windows.dlls.rar
omar_bot/data/: dropbox_token.json
omari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
